# template_api_rust

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: app_state.rs  main.rs
src/controllers/: city_controller.rs  mod.rs
src/models/: city.rs
src/repositories/: deletable.rs  insertable.rs  listable.rs  mod.rs  updatable.rs
src/requests/: mod.rs  request_city.rs
src/resources/: city_resource.rs  mod.rs
src/routes/: api.rs
src/services/: generic_query.rs  mod.rs
