[package]
name = "template_api_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

chrono = { version = "0.4.23", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

dotenvy = "0.15"

[dependencies.sqlx]
version = "0.6.2"
features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
  "uuid"
]
